# rust_demo_notes

./: Cargo.toml  README.md
src/adventofcode/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  lib.rs
src/adventofcode/data/: input_day5_test.txt
src/collections/: vector_demo.rs
src/const_generic/: const_generic.rs
src/control_flow/: if_else.rs  loop.rs  match.rs
src/fileio/: read_write.rs
src/gmail/: gmail_demo.rs
src/matrix/: 2darray.rs  matrix.rs  vec_vec.rs
src/networking/tcp/: ping_client.rs  ping_server.rs  tcp_client.rs  tcp_server.rs
src/networking/udp/: node.rs
src/networking/udp/multicast/: socket2_node.rs  socket_node.rs
src/oop/: composition.rs  enscapsulation.rs  function_overwrite.rs  generic.rs  inheritance.rs  inheritance_use_macro.rs  inheritance_use_marker_trait.rs  polymorphism.rs
src/oop/polymorphism/: dynamic_load_overwriting_box.rs  dynamic_load_overwriting_trait_object.rs  function_overwrite.rs  generic.rs  polymorphism.rs  static_dispatch_overload.rs
src/patterns/: link_list.rs  singleton.rs  singleton_2.rs
src/reqwest/: reqwest.rs
src/scope/: main.rs
src/string/: main.rs
src/thread/: create_thread.rs  sync_two_threads.rs  two_producers_one_consumer.rs
src/unit_test_demo/: main.rs
src/variable/: main.rs
