[package]
name = "thread_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
text_io = "0.1.12"
rand = "0.8.5"
socket2 = { version = "0.3.4", features = ["reuseport"] }
google-gmail1 = "*"
serde_json = "^1.0"

chrono = "0.4.11"
imap = "1.0.0"
itertools = "0.8.0"
native-tls = "0.2"
mailparse = "0.13.8"
substring = "1.4.5"
regex = "1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2.0"

[lib]
name="adventofcode"
path="src/adventofcode/lib.rs"

[[bin]]
name="string"
path= "src/string/main.rs"

[[bin]]
name="gmail"
path= "src/gmail/gmail_demo.rs"

[[bin]]
name="demo1"
path= "src/thread/create_thread.rs"

[[bin]]
name="demo2"
path= "src/thread/two_producers_one_consumer.rs"

[[bin]]
name="demo3"
path= "src/thread/sync_two_threads.rs"

[[bin]]
name="tcp_server"
path="src/networking/tcp/tcp_server.rs"

[[bin]]
name="tcp_client"
path="src/networking/tcp/tcp_client.rs"

[[bin]]
name="fileio"
path="src/fileio/read_write.rs"

[[bin]]
name="multicast"
path= "src/networking/udp/multicast/socket_node.rs"

[[bin]]
name="multinode"
path= "src/networking/udp/multicast/socket2_node.rs"

[[bin]]
name="request"
path= "src/reqwest/reqwest.rs"

[[bin]]
name="scope"
path= "src/scope/main.rs"

[[bin]]
name="variable"
path= "src/variable/main.rs"

[[bin]]
name="unit_test_demo"
path= "src/unit_test_demo/main.rs"

[[bin]]
name="if_else"
path= "src/control_flow/if_else.rs"

[[bin]]
name="loop"
path= "src/control_flow/loop.rs"

[[bin]]
name="match"
path= "src/control_flow/match.rs"

[[bin]]
name="generic"
path= "src/oop/generic.rs"

[[bin]]
name="function_overwrite"
path= "src/oop/function_overwrite.rs"

[[bin]]
name="composition"
path= "src/oop/composition.rs"

[[bin]]
name="matrix"
path= "src/matrix/matrix.rs"

[[bin]]
name="2darray"
path= "src/matrix/2darray.rs"

[[bin]]
name="vec_vec"
path= "src/matrix/vec_vec.rs"

[[bin]]
name="const_generic"
path= "src/const_generic/const_generic.rs"

[[bin]]
name="singleton"
path= "src/patterns/singleton.rs"

[[bin]]
name="singleton_2"
path= "src/patterns/singleton_2.rs"


[[bin]]
name="inheritance"
path= "src/oop/inheritance.rs"

[[bin]]
name="traitformultiplestruct"
path= "src/oop/inheritance_use_marker_trait.rs"

[[bin]]
name="inheritance_macro"
path= "src/oop/inheritance_use_macro.rs"

[[bin]]
name="linklist"
path= "src/patterns/link_list.rs"

[[bin]]
name="polymorphism_by_box"
path= "src/oop/polymorphism/dynamic_load_overwriting_trait_object.rs"

[[bin]]
name="polymorphism"
path= "src/oop/polymorphism/polymorphism.rs"

[[bin]]
name="polymorphism_box"
path= "src/oop/polymorphism/dynamic_load_overwriting_box.rs"

[[bin]]
name="overload"
path= "src/oop/polymorphism/static_dispatch_overload.rs"

[[bin]]
name="ffi_libc"
path= "src/ffi/calling_c_lib.rs"

[[bin]]
name="day1"
path="src/adventofcode/day1.rs"

[[bin]]
name="day2"
path="src/adventofcode/day2.rs"

[[bin]]
name="day3"
path="src/adventofcode/day3.rs"

[[bin]]
name="day4"
path="src/adventofcode/day4.rs"

[[bin]]
name="day5"
path="src/adventofcode/day5.rs"

[[bin]]
name="vector_demo"
path="src/collections/vector_demo.rs"

[[bin]]
name="day6"
path="src/adventofcode/day6.rs"

[[bin]]
name="day7"
path="src/adventofcode/day7.rs"

[[bin]]
name="day8"
path="src/adventofcode/day8.rs"